...
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCabecalhoListaRecentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="10"
                tools:listitem="@layout/card_recentes" />

            <TextView
...
